syntax = "proto3";

package auth;

service AuthService {
  rpc LoginWithPassword(LoginWithPasswordPayload) returns (Tokens) {}
  rpc LoginWithPasskey(LoginWithPasskeyPayload) returns (Tokens) {}
}

message LoginWithPasswordPayload {
  optional string login = 1;
  optional string email = 2;
  string password = 3;
}

message LoginWithPasskeyPayload {
  optional string login = 1;
  optional string email = 2;
  string passkey = 3;
}

message Tokens {
  string access_token = 1;
  string refresh_token = 2;
}

message Status {
  bool status = 1;
}
